--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "babel-polyfill": "^6.3.14",
     "node-uuid": "^1.4.7",
+    "normalizr": "^2.1.0",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-redux": "^4.4.5",
